
- fixed loading plugin files (only `.js` files will load)
- removed loading of `.DS_STORE` files in plugins
- added watcher for `extensions/*.html` files
- __breaking change__: the audit logs object has been changed:
	- `username` renamed to `createdby`
	- `schema` renamed to `action`
- disabled auto-cleaning files in FlowStream workers
- improved loading static files in release mode

========================
0.0.13
========================

- added auto script loader for `extensions` directory
- added auto script loader for `transforms` directory
- added support for Python scripts in the `pypelines` folder
- added `PYPELINE(name, [options])` method starts a python process
- added support for custom View engine helpers `DEF.helpers.myhelper`
- fixed killing workers and pypelines
- added a feature that kills worker flow instances when the main process is terminated
- extended `Total.readfile(path, [type])` by adding a new type `datauri`
- fixed returing collections from the `HTMLParser.find()` method
- added `extend:String` option in `NEWACTION()` method
- added `FILECACHE(id, expire, callback, maker, encoding)` method
- fixed linking errors with the resource files
- added `RESTBuilder.?.base64()` method which returns the response in BASE64 format
- added support for custom errors in the Total.js Inline JSON Schemas, example: `id:UID // Invalid identifier, ...`
- added `ErrorBuilder.throw()` method which throws an error when an error is pushed
- fixed `HTMLParser.?.find()` method (fixed results)
- extended `QueryBuilder.gridfilter()` by adding `=EXACT_VALUE` or `=EXACT_VALUE1,EXACT_VALUE2`
- IMPORTANT: updated `RESTBuilder` XML response, now it returns `HTMLParser` output
- fixed removing of multiple spaces in the `String.toName()` method
- fixed a problem with case-sensitive characters in the route parameters
- fixed markdown parser
- added missing ViewEngine `@{meta(...)}` method
- fixed `expires` argument in the `$.cookie(key, value, expires|options)` method