@@ -10,6 +10,7 @@
 	- `schema` renamed to `action`
 - disabled auto-cleaning files in FlowStream workers
 - improved loading static files in release mode
+- added support for `HEAD` method
 
 ========================
 0.0.13
